# claude-dbus

./: .project.json  AGENTS.md  CLAUDE.md  CODEX_HOOKS.md  Cargo.toml  README.md
agent-dbus-core/: Cargo.toml
agent-dbus-core/src/: agent.rs  lib.rs  path.rs  provider.rs
agent-dbus-locus-proxy/: Cargo.toml
agent-dbus-locus-proxy/src/: main.rs
agent-dbus-service/: Cargo.toml
agent-dbus-service/src/: agent_hook.rs  agent_respond.rs  dbus.rs  lib.rs  main.rs  request_broker.rs  service.rs  session_store.rs  socket.rs  types.rs
agent-dbus-service/src/providers/: gemini.rs  mod.rs
agent-dbus-service/src/providers/codex/: artifacts.rs  compact.rs  metrics.rs  mod.rs  parent.rs  permissions.rs  subagent.rs  title.rs
agent-dbus-service/src/service/: metrics.rs  permission.rs
src/: agent_hook.rs  agent_respond.rs  claude_hook.rs  constants.rs  dbus.rs  hooks.rs  lib.rs  main.rs  path.rs  types.rs
src/hooks/: metrics.rs  permission.rs
