[package]
name = "agent-dbus"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agent-dbus"
path = "src/main.rs"

[[bin]]
name = "agent-hook"
path = "src/agent_hook.rs"

[[bin]]
name = "agent-respond"
path = "src/agent_respond.rs"

[dependencies]
locus = { package = "locus-api", path = "../locus/locus-api" }
zbus = "5.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
